--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.88.2",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "tor-request": "^3.1.0"
   }
 }
